# visionai-sdk-python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
src/visionai_sdk_python/: __init__.py  _base.py  _jwt_verifier.py  async_client.py  client.py  constants.py  endpoints.py  exceptions.py  main.py  models.py
src/visionai_sdk_python/auth/: __init__.py  _mixin.py  async_resource.py  models.py  resource.py
src/visionai_sdk_python/vlm/: __init__.py  _mixin.py  async_resource.py  models.py  resource.py
tests/: constants.py  test__base.py  test_async_client.py  test_client.py
