[project]
name = "visionai-sdk-python"
version = "0.1.0"
description = "VisionAI SDK for Python"
readme = "README.md"
authors = [
    { name = "Tony Yang", email = "tonyyang@linkervision.com" }
]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
