[project]
name = "visionai-sdk-python"
dynamic = ["version"]
description = "VisionAI SDK for Python"
readme = "README.md"
authors = [
    { name = "Tony Yang", email = "tonyyang@linkervision.com" }
]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "cryptography>=46.0.5",
    "PyJWT[cryptography]>=2.8.0",
]

[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.25.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
